# High-Performance-Computing-for-Sensitivity-of-a-Scalar-Function

./: CMakeLists.txt  README.md  build.sh  f_eval.cuh  f_eval.h  generate.sh  inputArray.inp  jacobian.cu  jacobian_cpu.c  jacobian_cpu_op.c  matrix.c
